spring data mock exam JSON and XML parsing. Issue with XML parsing, can't pass the tests but I get 75/100 in judge submission.